manifests/hardened/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceshop
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juiceshop
  template:
    metadata:
      labels:
        app: juiceshop
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: juiceshop
          image: bkimminich/juice-shop:v15.0.0
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false  # juice-shop требует запись
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
