manifests/hardened/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: juiceshop-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: juiceshop
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - ports:
        - protocol: UDP
          port: 53
